objects/Test_Run_Step__c.object
<CustomObject>
    <description>The execution of each templated test script step.</description>
    <fields>
        <fullName>Action_Description__c</fullName>
        <formula>Script_Step__r.Action_Description__c</formula>
        <label>Action/Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <label>Actual Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <formula>Script_Step__r.Expected_Result__c</formula>
        <label>Expected Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guidance_notes__c</fullName>
        <formula>Script_Step__r.Guidance_notes__c</formula>
        <label>Guidance notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <formula>Script_Step__r.Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Script_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Script Step</label>
        <referenceTo>Test_Script_Step__c</referenceTo>
        <relationshipLabel>Test Run Steps</relationshipLabel>
        <relationshipName>Test_Script_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Passed with comments</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Run__c</fullName>
        <label>Test Run</label>
        <referenceTo>Test_Run__c</referenceTo>
        <relationshipLabel>Test Run Steps</relationshipLabel>
        <relationshipName>Test_Run_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Run Step</label>
    <nameField>
        <displayFormat>TRS-{000000}</displayFormat>
        <label>Test Run Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Run Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>